Vorläufiges Implementierungskapitel fertig

--- a/alpaka.tex
+++ b/alpaka.tex
@@ -1151,6 +1151,35 @@ dargestellt ist.
     \label{alpaka:konzepte:abstraktion:elements:vollstaendig}
 \end{figure}
 
+\subsection{Speicherhierarchie}
+\label{alpaka:konzepte:speicher}
+
+Alpaka übernimmt Teile von CUDAs Speicherhierarchie. Dabei werden aus
+Beschleunigersicht drei Ebenen innerhalb der Hierarchie unterschieden.
+
+Der globale Speicher (\textit{global memory}) steht allen \textit{Threads}
+innerhalb des \textit{Grids} zur Verfügung. Im Vergleich zu den restlichen
+Ebenen der Hierarchie bietet er in der Regel den meisten Speicherplatz, ist
+allerdings auch deutlich langsamer an den Chip angebunden. Er fungiert außerdem
+als Bindeglied zum Speicher des \textit{Host}"=Systems, da Kopien vom
+\textit{Host} auf das \textit{Device} über den globalen Speicher durchgeführt
+werden. Alpakas und SYCLs \textit{global"=memory}"=Konzepte entsprechen einander.
+\cite[vgl.][17]{worpitz2015}
+
+Auf der nächsten Ebene befindet sich der von den \textit{Threads} eines
+einzelnen \textit{Blocks} geteilte Speicher (\textit{shared memory}). Jeder
+\textit{Block} besitzt seinen eigenen \textit{shared memory}, dessen Inhalte
+verworfen werden, sobald alle \textit{Threads} des \textit{Blocks} ihre
+Ausführung beendet haben. Gegenüber dem \textit{global memory} zeichnet sich der
+\textit{shared memory} durch eine höhere Geschwindigkeit bei gleichzeitig
+deutlich weniger Speicherplatz aus. SYCL kennt ein ähnliches Speicherprinzip,
+das \textit{local memory} genannt wird. \cite[vgl.][20]{worpitz2015}
+
+Jeder \textit{Thread} besitzt außerdem eine Reihe von Registern, auf die nur er
+selbst Zugriff hat. In diesen werden z.B. \textit{thread}"=lokale Variablen
+gespeichert. SYCLs Äquivalent wird \textit{private memory} genannt.
+\cite[vgl.][17]{worpitz2015}
+
 \subsection{Abhängigkeiten zwischen Kerneln}
 \label{alpaka:konzepte:abhaengigkeiten}
 
